--- a/index.html
+++ b/index.html
@@ -1,6 +1,38 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Limo Lead LLC</title>
+	<style>
+	  html {
+	     font-family: Roboto, "Century Gothic", sans-serif;
+	  }
+	  
+	  #main_div {
+	     display: flex;
+		 flex-direction: row;
+		 justify-content: center;
+	  }
+	  
+	  #copyright {
+	     text-align: center;
+	  }
+	  
+	  footer {
+		 position: absolute;
+		 bottom: 0;
+		 left: 0;
+		 right: 0;
+	  }
+	</style>
+  </head>
   <body>
-    <h4>Limo Lead LLC</h4>
+    <div id="main_div">
+	   <h2>Limo Lead LLC</h2>
+	</div>
   </body>
+  <footer>
+     <p id="copyright">&copy; 2024, Limo Lead LLC</p>
+  </footer>
 </html>
